--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "Memio\\Model\\": "src/Memio/Model"
     }},
     "require": {
-        "php": "^7.0"
+        "php": "^7.2|^8.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.10",
